--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,17 @@
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
+    "bulma": "^0.9.1",
     "core-js": "^3.6.5",
     "marked": "^1.2.0",
     "vue": "^2.6.12",
+    "vue-gallery": "^2.0.1",
+    "vue-gallery-slideshow": "^1.5.2",
+    "vue-picture-swipe": "^2.0.2",
     "vue-router": "^3.2.0",
-    "vue-sidebar-menu": "^4.7.2"
+    "vue-sidebar-menu": "^4.7.2",
+    "vue-tinybox": "^1.3.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
@@ -26,6 +32,8 @@
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^10.0.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
