--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "bootstrap-vue": "^2.17.3",
     "bulma": "^0.9.1",
     "core-js": "^3.6.5",
+    "dateformat": "^3.0.3",
     "marked": "^1.2.0",
+    "moment": "^2.29.1",
     "vue": "^2.6.12",
     "vue-gallery": "^2.0.1",
     "vue-gallery-slideshow": "^1.5.2",
